syntax = "proto3";

service CRService {
  rpc GetServerEndpoint(GetServerRequest) returns (ServerEndpoint);
}

message GetServerRequest {
  string client_id = 1;
  }

message ServerEndpoint {
  string server_ip = 1;
  int32 server_port = 2;
  }

