syntax = "proto3";

option java_multiple_files = true;
option java_package = "rpcKvServerStub";

package KvServerService; // proto  package

service InterRingService {
    rpc interWrite(stream Pair) returns (Void);
    rpc interRead(stream Pair) returns (Void);
}

message Pair {
    string key = 1;
    string value = 2;
    string idServer = 3;
}

message Void {

}