syntax = "proto3";

option java_multiple_files = true;
option java_package = "servertoserverservice";

package servertoserverservice;

service ServerToServerService {

  rpc writeRead(stream Pair) returns (Void);

}
message Pair {
  string key = 1;
  string value = 2;
  string IPPort = 3;
  bool flagWriteRead = 4;
}

message Void {
}